<resources>

    <string name="app_name">GirlTrollSV</string>

    <string name="facebook_app_id">914437952016244</string>
    <string name="view_top">Xem top</string>
    <string name="fix_image">Chế ảnh</string>
    <string name="view_girl_university">Xem gái các trường</string>

    <string name="drawer_open">Open navigation drawer</string>

    <string name="drawer_close">Close navigation drawer</string>
    <string name="like">Thích</string>
    <string name="comment">Bình luận</string>
    <string name="share">Chia sẻ</string>
    <string name="base_school">Gái :</string>
    <string name="base_like">Thích</string>
    <string name="base_comment">Bình luận</string>
    <string name="download_video">Tải về</string>
    <string name="report">Báo xấu</string>
    <string name="description_zoom">Zoom</string>
    <string name="description_full_screen">Full scrren</string>

    <string name="bare_url">https://girltroll.com/</string>

    <string name="no_network">Không có kết nối mạng</string>

    <string name="share_description">Ngắm gái xinh các trường cùng GirlTrollSV</string>
    <string name="error_load_feed">Không kéo được mấy em chân dài sv về (.^.) ! </string>
    <string name="button_reload">Tải lại</string>
    <string name="text_button_reload">Tải lại</string>
    <string name="title_app">GirlTrollSv</string>
    <string name="description_app1">Tham gia cộng đồng GirlTrollSv</string>
    <string name="description_app2">Khám phá nữ sinh Việt</string>

    <string name="text_login_facebook">Tiếp tục với Facebook</string>
    <string name="text_login_normal">Đăng nhập</string>
    <string name="text_sign_up">Tạo tài khoản</string>
    <string name="text_or">hoặc</string>
    <string name="text_hint_username">Email</string>
    <string name="text_hint_password">Mật khẩu</string>
    <string name="login">Đăng nhập GirlTrollSv</string>
    <string name="loading">Loading...</string>
    <string name="accepted">Đồng ý</string>
    <string name="cancel">Hủy bỏ</string>
    <string name="confirm_login">Đăng nhập GirlTrollSv</string>
    <string name="message_confirm_login">Để thực hiện chức năng này bạn cần phải đăng nhập</string>
    <string name="title_logining">Đang đăng nhập...</string>
    <string name="message_logining">Chỉ trong giây lát...</string>
    <string name="login_fail">Rất tiếc đăng nhập đã thất bại</string>
    <string name="login_success">Đăng nhập thành công</string>

    <string name="catalog">Khám phá nào các chế !</string>

    <string name="catalog_login_personal">Đăng nhập</string>
    <string name="personal_title">Tài Khoản</string>

    <string name="menu">Danh mục</string>
    <string name="upload_photo">Thêm ảnh</string>

    <string name="confirm_logout">Đăng xuất</string>
    <string name="message_confirm_logout">Bạn có muốn đăng xuất khỏi GirlTrollSv</string>
    <string name="text_logout">Đăng xuất</string>

    <string name="email_not_enter">Bạn chưa nhập email</string>
    <string name="password_not_enter">Bạn chưa nhập mật khẩu</string>
    <string name="email_enter_false">Bạn chưa nhập email chưa đúng định dạng</string>
    <string name="text_hint_description_post">Mô tả về bài đăng</string>
    <string name="title_upload_photo">Đăng lên GirlTrollSv</string>
    <string name="title_school">Chọn trường đại học :</string>
    <string name="text_btn_upload">Đăng</string>
    <string name="txt_uploading">Đang đăng ...</string>
    <string name="view_history_post">Xem lịch sử các bài đăng</string>
    <string name="upload_fail_message">Đăng bài thất bại</string>
    <string name="upload_success_message">Đăng bài thành công</string>
    <string name="upload_reject_message">Bài đăng không hợp lệ</string>
    <string name="touch_view_detail">Chạm vào đây để xem chi tiết bài đăng</string>

    <string-array name="schools">
        <item>Bách Khoa Hà Nội</item>
        <item>Bách Khoa HCM</item>
        <item>Kinh Tế Quốc Dân</item>
        <item>Xây Dựng</item>
        <item>Ngoại Thương</item>
        <item>Công Nghiệp Hà Nội</item>
        <item>Học Viện Tài Chính</item>
        <item>Học Viện Ngân Hàng</item>
        <item>Mỏ Địa Chất</item>
        <item>Dược Hà Nội</item>
        <item>Y Hà Nội</item>
        <item>Kinh Doanh Công Nghệ</item>
        <item>Quốc Gia Hà Nội</item>
        <item>Khoa Học Tự Nhiên và Nhân Văn</item>
    </string-array>

</resources>
